# fletcher_2pass_portability

./: .gitignore  CMakeLists.txt  README  accessor.hpp  boundary.hpp  derivatives.hpp  driver.hpp  main.cpp  model.cpp  model.hpp  source.cpp  source.hpp  utils.cpp  utils.hpp  walltime.cpp  walltime.hpp
cuda/: CMakeLists.txt  cuda_driver.cpp  cuda_driver.hpp
hip/: CMakeLists.txt  hip_driver.cpp  hip_driver.hpp
kokkos/: CMakeLists.txt  kokkos_driver.cpp  kokkos_driver.hpp
raja/: CMakeLists.txt  raja_defines.hpp  raja_driver.cpp  raja_driver.hpp
scripts/: arm_cuda.sh  x86_cuda.sh  x86_rocm.sh
sycl/: CMakeLists.txt  sycl_driver.cpp  sycl_driver.hpp
